fix:503 Landscape with browser chrome makes heading cramped on the homepage

--- a/_assets/css/_fullwidth.scss
+++ b/_assets/css/_fullwidth.scss
@@ -88,6 +88,16 @@ Stylesheet: Full Width Page Stylesheet
     height: 86%;
 
     .cell {
+      margin-top:2.33rem;
+      font-size:0.85rem;
+      @include breakpoint(medium ) {
+        margin-top:6.5rem;
+        font-size:1rem;
+      }
+      @include breakpoint(large ) {
+        margin-top:3rem;
+      }
+
       > * {
         max-width: rem-calc(400);
         margin-left: auto;
